--- a/Pages/Projects.cshtml
+++ b/Pages/Projects.cshtml
@@ -18,7 +18,7 @@
                     API .NET 8 KYC/AML : scoring explicable, PPE/sanctions, détection d’anomalies, règles & événements métier.
                 </p>
                 <div class="mt-auto d-flex flex-wrap gap-2">
-                    <a asp-page="Projects/Watchdog_Project" class="btn btn-outline-primary">Voir plus</a>
+                    <a asp-page="Projects/Watchdog" class="btn btn-outline-primary">Voir plus</a>
                     <a href="https://github.com/keekee3091/Watchdog_v2" class="btn btn-primary" target="_blank" rel="noopener">GitHub</a>
                 </div>
             </div>
@@ -42,18 +42,18 @@
         </div>
     </div>
 
-    <!-- CRM BackOffice PCi33 -->
+    <!-- Cowork-Link -->
     <div class="col">
         <div class="card project-card h-100 border-0 shadow-sm">
             @* <img src="~/images/projects/crm_pci33.jpg" class="card-img-top" alt="CRM BackOffice PCi33" /> *@
             <div class="card-body d-flex flex-column">
-                <h5 class="card-title">CRM BackOffice PCi33</h5>
+                <h5 class="card-title">Cowork-Link</h5>
                 <p class="card-text text-muted flex-grow-1">
                     Système legacy (VB.NET / WebForms / SQL Server / Telerik) : optimisation SQL, refactors ciblés, stabilisation RadGrid/RadFilter,
                     fiabilisation KYC & facturation en production.
                 </p>
                 <div class="mt-auto d-flex flex-wrap gap-2">
-                    <a asp-page="Projects/crm_backoffice_pci33" class="btn btn-outline-primary">Voir plus</a>
+                    <a asp-page="Projects/Backoffice" class="btn btn-outline-primary">Voir plus</a>
                 </div>
             </div>
         </div>
