--- a/Pages/Projects/Volatiq.cshtml
+++ b/Pages/Projects/Volatiq.cshtml
@@ -92,7 +92,7 @@
         <!-- 1) Acquisition & cache -->
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
@@ -119,7 +119,7 @@
         <!-- 2) API -->
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
@@ -146,7 +146,7 @@
         <!-- 3) Moteur C++ -->
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
@@ -173,7 +173,7 @@
         <!-- 4) IV + surfaces -->
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
@@ -200,7 +200,7 @@
         <!-- 5) Scoring anomalies -->
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
@@ -227,7 +227,7 @@
         <!-- 6) Monte-Carlo -->
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
