--- a/Pages/Projects/Watchdog.cshtml
+++ b/Pages/Projects/Watchdog.cshtml
@@ -28,7 +28,7 @@
 
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
@@ -54,7 +54,7 @@
 
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
@@ -80,7 +80,7 @@
 
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
@@ -106,7 +106,7 @@
 
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
@@ -132,7 +132,7 @@
 
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
@@ -158,7 +158,7 @@
 
         <div class="col">
             <button type="button"
-                    style="width: 416px;"
+                    style="width: 100%;"
                     class="card achievement-card shadow-sm h-100 text-start"
                     data-bs-toggle="modal"
                     data-bs-target="#achievementModal"
