--- a/Pages/Skills/Cpp.cshtml
+++ b/Pages/Skills/Cpp.cshtml
@@ -227,7 +227,7 @@
 
 </div>
 <div class="modal fade" id="achievementModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <div>
